<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".view.NutriHistoryActivity">

    <ImageView
        android:id="@+id/k_market_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/kmarketlogo"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kmarketlogo"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="410dp"
        android:layout_height="230dp"
        android:layout_marginTop="5dp"
        android:background="@color/background_gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/k_market_logo"
        tools:visibility="visible">

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/nutri_pie_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/background_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nutriScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nutri_pie_chart"
            app:layout_constraintCircle="@id/nutri_pie_chart"
            app:layout_constraintEnd_toStartOf="@+id/nutri_pie_chart"
            app:layout_constraintStart_toEndOf="@+id/nutri_pie_chart"
            app:layout_constraintTop_toBottomOf="@+id/nutri_pie_chart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btn_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_orange"
            android:text="@string/btn_week_txt"
            android:textColor="@color/txt_light" />

        <Button
            android:id="@+id/btn_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_gray"
            android:text="@string/btn_month_txt"
            android:textColor="@color/txt_light" />

        <Button
            android:id="@+id/btn_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_gray"
            android:text="@string/btn_year_txt"
            android:textColor="@color/txt_light" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="176dp"
        android:text="@string/welcome_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:text="@string/motiv_txt"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extendedPanelNutriScore"
        android:layout_width="409dp"
        android:layout_height="304dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:visibility="invisible">

        <LinearLayout
            android:id="@+id/hiddenlinearlayout"
            android:layout_width="10dp"
            android:layout_height="302dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nuscoA"
                android:clickable="false"
                android:text="" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nuscoB"
                android:clickable="false"
                android:text="" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nuscoC"
                android:clickable="false"
                android:text="" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nuscoD"
                android:clickable="false"
                android:text="" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nuscoE"
                android:clickable="false"
                android:text="" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>